--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script>
 
         $(document).ready(function () {
-            const liffId = "1657114678-BljnEe8j";
+            const liffId = "1657114829-yEMzjgrX";
             initializeLiff(liffId);
         })
 
